css/main.css
a {
    color: #373c44;
    text-decoration: none;
    margin: 0 2.2rem;
    font-size: 1.7rem;
}

a:hover {
    color: #e8e8e8;
}

#nav {
    margin: 4rem auto;
    text-align: center;
}

body {
    background-color: white;
    color: #373c44;
}

#main {
    text-align: center;
    margin-bottom: 10rem;
}

#hello {
  margin-top: 12rem;
  margin-bottom: 7rem;
}

#icons {
  margin-bottom: 4rem;
}

#icon {
  padding-left: 1.5rem;
  padding-right: 1.5rem;
}

#about {
    width: 100%;
    height: auto;
    background-color: #e8e8e8;
    padding-top: 2rem;
    font-size: 1.8rem;
}

#about-box {
    text-align: left;
    margin: 3.5rem auto;
    padding-left: 4.7rem;
    padding-right: 4.7rem;
    padding-bottom: 4rem;
    color: #373c44;
}

.container>h3 {
    text-align: center;
}

#project-title {
    text-align: center;
    margin: 5rem auto;
}

a>h4 {
    margin-top: -2.2rem;
}

#projects {
    width: auto;
    height: auto;
    margin-bottom: 4rem;
}

.project-image>img {
    width: 100%;
    height: auto;
    box-shadow: 11px 8px 26px 0px rgba(0, 0, 0, 0.2);
    ;
}

.project-description {
    width: 100%;
    height: auto;
}

#each-project {
    margin-bottom: 5rem;
}

#contact {
    width: auto;
    height: 52rem;
    background-color: #e8e8e8;
    text-align: center;
}

#contact-title {
    padding-top: 5rem;
    margin-bottom: 3rem;
}

#contact-box {
    margin-top: 9rem;
}

#bottom-line {
    margin-top: 13rem;
}

